--- a/maven/src/main/webapp/WEB-INF/web.xml
+++ b/maven/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,6 @@
         <url-pattern>/</url-pattern>  
     </servlet-mapping>  
     <welcome-file-list>  
-        <welcome-file>/index.jsp</welcome-file>  
+        <welcome-file>/home</welcome-file>  
     </welcome-file-list>
 </web-app>
