--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -6,12 +6,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<!-- spring版本号 -->
-		<spring.version>4.3.10.RELEASE</spring.version>
+		<spring.version>5.0.4.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
-		<mybatis.version>3.4.5</mybatis.version>
+		<mybatis.version>3.4.6</mybatis.version>
 		<!-- log4j日志文件管理包版本 -->
-		<slf4j.version>1.7.7</slf4j.version>
-		<log4j.version>2.8.2</log4j.version>
+		<slf4j.version>1.7.25</slf4j.version>
+		<log4j.version>2.11.0</log4j.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -90,7 +90,7 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.8.10</version>
+			<version>1.9.0</version>
 		</dependency>
 
 
@@ -106,14 +106,14 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>1.3.1</version>
+			<version>1.3.2</version>
 		</dependency>
 
 		<!-- Mysql驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.26</version>
+			<version>5.1.46</version>
 		</dependency>
 
 		<!-- 日志 -->
@@ -133,11 +133,16 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 
-		<!-- Json -->
+		<!-- Json Spring4之后要升级jaskson包，否则415-->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-asl</artifactId>
-			<version>1.9.13</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -149,17 +154,17 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
+			<version>1.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.9</version>
+			<version>1.11</version>
 		</dependency>
 
 		<!-- JSTL -->
@@ -170,33 +175,33 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javassist</groupId>
+			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.12.1.GA</version>
+			<version>3.22.0-GA</version>
 		</dependency>
 
 		<dependency>
-			<groupId>asm</groupId>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
-			<version>3.3.1</version>
-
+			<version>6.1.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
-			<version>3.2.5</version>
+			<version>3.2.6</version>
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>  
-    <plugin>  
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-compiler-plugin</artifactId>  
-        <configuration>  
-            <source>1.8</source>  
-            <target>1.8</target>  
-        </configuration>  
-    </plugin>  
-</plugins>  
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
