--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -86,15 +86,16 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.9.0</version>
 		</dependency>
-
-
-
 		<!-- Mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
