--- a/maven/src/main/webapp/WEB-INF/web.xml
+++ b/maven/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,14 @@
         <filter-name>encodingFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
     </filter-mapping>  
+    <filter>
+    	<filter-name>loginFilter</filter-name>
+    	<filter-class>com.tu.security.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    	<filter-name>loginFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+    </filter-mapping>
     <!-- Spring监听器 -->  
     <listener>  
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
